[gd_scene load_steps=4 format=3 uid="uid://cy0wh2ckvpyq8"]

[ext_resource type="Script" path="res://scenes/result_screen.gd" id="1_6m7in"]
[ext_resource type="Texture2D" uid="uid://chvtvrql3jnqg" path="res://assets/png/PASS.png" id="1_62ov7"]
[ext_resource type="Texture2D" uid="uid://b4dcivk5oq0gm" path="res://assets/png/folder.png" id="1_den28"]

[node name="ResultScreen" type="MarginContainer"]
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.113
offset_left = 2.0
offset_top = -1.0
offset_right = -0.304077
offset_bottom = -0.223999
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_6m7in")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_den28")

[node name="ContentBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="HBoxContainer" parent="ContentBox"]
layout_mode = 2
size_flags_vertical = 4

[node name="MissionName" type="Label" parent="ContentBox/Title"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "MissionName Goes here...."
horizontal_alignment = 1
uppercase = true

[node name="BadgeImg" type="TextureRect" parent="ContentBox/Title"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
texture = ExtResource("1_62ov7")
stretch_mode = 2

[node name="Recap" type="VBoxContainer" parent="ContentBox"]
layout_mode = 2

[node name="Example1" type="Label" parent="ContentBox/Recap"]
layout_mode = 2
text = "Choice 1 .... OK"

[node name="Example2" type="Label" parent="ContentBox/Recap"]
layout_mode = 2
text = "Choice 2 .... OK"

[node name="Example3" type="Label" parent="ContentBox/Recap"]
layout_mode = 2
text = "Choice 3 .... FAILED
"
